Stylus/rule34.xxx/Image Within Viewport.user.css
/* ==UserStyle==
@name           Image within viewport
@namespace      github.com/Neop0litan/CSS-Tweaks
@version        1.3
@description    Scales the image down so it fits within the viewport horizontally.
@author         Neopolitan#0002 (https://discord.com/users/427114049487241227)
@homepageURL    https://github.com/Neop0litan/CSS-Tweaks
==/UserStyle== */

@-moz-document url-prefix("https://rule34.xxx/index.php?page=post&s=view"), url-prefix("http://rule34.xxx/index.php?page=post&s=view") {
    #image,
    #gelcomVideoContainer > * > video {
        max-width: 100%;
    }
}

